css/effect.css
@font-face {
  font-weight: normal;
  font-style: normal;
  font-family: "feathericons";
  src: url("../fonts/feathericons/feathericons.eot?-8is7zf");
  src: url("../fonts/feathericons/feathericons.eot?#iefix-8is7zf")
      format("embedded-opentype"),
    url("../fonts/feathericons/feathericons.woff?-8is7zf") format("woff"),
    url("../fonts/feathericons/feathericons.ttf?-8is7zf") format("truetype"),
    url("../fonts/feathericons/feathericons.svg?-8is7zf#feathericons")
      format("svg");
}

.portfolio {
  position: relative;
  margin: 0 auto;
  padding: 1em 0 4em;
  max-width: 1000px;
  list-style: none;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
}

/* Common style */
.portfolio figure {
  position: relative;
  overflow: hidden;
  margin: 10px 1%;
  min-width: 320px;
  max-width: 480px;
  max-height: 360px;
  width: 48%;
  background: #535ace;
  text-align: center;
  cursor: pointer;
}

.portfolio figure img {
  position: relative;
  display: block;
  min-height: 100%;
  max-width: 100%;
  opacity: 0.8;
  object-fit: cover;
}

.portfolio figure:hover img {
  transition: opacity 0.35s;
  opacity: 0.2;
}

.portfolio figure figcaption {
  padding: 2em;
  color: #fff;
  text-transform: uppercase;
  font-size: 1.25em;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.portfolio figure figcaption::before,
.portfolio figure figcaption::after {
  pointer-events: none;
}

.portfolio figure figcaption,
.portfolio figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Anchor will cover the whole item by default */
/* For some effects it will show as a button */
.portfolio figure figcaption > a {
  z-index: 1000;
  text-indent: 200%;
  white-space: nowrap;
  font-size: 0;
  opacity: 0;
}

.portfolio figure h2 {
  word-spacing: -0.15em;
  font-weight: 300;
  font-size: 1.5rem;
}

.portfolio figure h2 span {
  font-weight: 800;
}

.portfolio figure h2,
.portfolio figure p {
  margin: 0;
}

.portfolio figure p {
  letter-spacing: 1px;
  font-size: 68.5%;
}

figure.portfolio__img figcaption {
  top: auto;
  bottom: 0;
  padding: 1em;
  height: 3.75em;
  background: #fff;
  color: #3c4a50;
  -webkit-transition: -webkit-transform 0.35s;
  transition: transform 0.35s;
  -webkit-transform: translate3d(0, 100%, 0);
  transform: translate3d(0, 100%, 0);
}

figure.portfolio__img h2 {
  float: left;
}

figure.portfolio__img p.portfolio__links a {
  float: right;
  color: #3c4a50;
  font-size: 1.4em;
}

figure.portfolio__img:hover p.portfolio__links a:hover,
figure.portfolio__img:hover p.portfolio__links a:focus {
  color: #252d31;
}

figure.portfolio__img p.portfolio__description {
  position: absolute;
  bottom: 8em;
  padding: 2em;
  color: #fff;
  text-transform: none;
  font-size: 1.1rem;
  opacity: 0;
  -webkit-transition: opacity 0.35s;
  transition: opacity 0.35s;
  -webkit-backface-visibility: hidden; /* Fix for Chrome 37.0.2062.120 (Mac) */
}

figure.portfolio__img h2,
figure.portfolio__img p.portfolio__links a {
  -webkit-transition: -webkit-transform 0.35s;
  transition: transform 0.35s;
  -webkit-transform: translate3d(0, 200%, 0);
  transform: translate3d(0, 200%, 0);
}

figure.portfolio__img h2 {
  display: inline-block;
}

figure.portfolio__img:hover p.portfolio__description {
  opacity: 1;
}

figure.portfolio__img:hover figcaption,
figure.portfolio__img:hover h2,
figure.portfolio__img:hover p.portfolio__links a {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

figure.portfolio__img:hover h2 {
  -webkit-transition-delay: 0.05s;
  transition-delay: 0.05s;
}

figure.portfolio__img:hover p.portfolio__links a:nth-child(3) {
  -webkit-transition-delay: 0.1s;
  transition-delay: 0.1s;
}

figure.portfolio__img:hover p.portfolio__links a:nth-child(2) {
  -webkit-transition-delay: 0.15s;
  transition-delay: 0.15s;
}

figure.portfolio__img:hover p.portfolio__links a:first-child {
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

@media screen and (max-width: 50em) {
  .content {
    padding: 0 10px;
    text-align: center;
  }
  .portfolio figure {
    display: inline-block;
    float: none;
    margin: 10px auto;
    width: 100%;
  }
}

